== 0.4.x

=== Bugfixes
* Ensure no errors are raised when limiting with tags which are not in the feature set (#464 Joseph Wilk)

== 0.4.0 2009-10-09

The back to stable release. When we went from 0.3.11 to 0.3.90 we thought we were close to a 0.4.0 release. Then the community
went nuts and a lot of great contributions came in. Some of those broke backwards compatibility, and we decided it would be
better to do this while still on 0.3.x.

Rails users: you *must* run script/generate cucumber after installing this version.

If something breaks for you, please please please read this file carefully. It's most likely something referenced here, and
that will give you more information so you can solve any problems. If not, just get in touch on IRC or the Google Group.

=== New Features
* Total feature parsing time is shown when run with --verbose. Useful for benchmarking with future Ragel parser (Aslak Hellesøy)
* Tables yielded to step definitions are no longer frozen, so you can edit their data without #dup'ing (Aslak Hellesøy)
* Transform can now transform tables, using /table:col1,col2,col3/ (#478 Corey Haines)
* cucumber.yml can also end in .yaml and be located in .config/ or config/ dirs (#447 trans)
* Turkish support. (Hakan Şenol Ensari)
* Upgrade Rails generator to set a dependency to Spork 0.7.2. (Aslak Hellesøy)
* Installation via rubygems will print a message telling people to read this file. (Aslak Hellesøy)
* Files generated by the Rails cucumber generator have information about the risks of editing. (Aslak Hellesøy)
* Rotten Cucumber alert on Rails if you upgrade your gem without regenerating with script/generate cucumber. (Aslak Hellesøy)
* Stop the confusion between "homepage" and "home page" by allowing both (Ryan Bigg & Bodaniel Jeanes)
* Make script/cucumber file generated by the Rails cucumber generator look for cucumber in vendored gems as well. (Tom ten Thij)

=== Changed Features