@@ -105,6 +105,9 @@ module Cucumber
 
       def filter_backtrace(e)
         return e if Cucumber.use_full_backtrace
+        pwd = /#{Dir.pwd}\//m
+        (e.backtrace || []).each{|line| line.gsub!(pwd, "./")}
+        
         filtered = (e.backtrace || []).reject do |line|
           BACKTRACE_FILTER_PATTERNS.detect { |p| line =~ p }
         end
