@@ -13,6 +13,7 @@ class Proc #:nodoc:
   if Proc.new{}.to_s =~ PROC_PATTERN
     def file_colon_line
       path, line = *to_s.match(PROC_PATTERN)[1..2]
+      line = line.to_i - 1 if Cucumber::RUBY_1_9
       path = File.expand_path(path)
       pwd = Dir.pwd
       path = path[pwd.length+1..-1]
