@@ -1,6 +1,7 @@
 == 0.4.x
 
 === Bugfixes
+* Cucumber's features now pass on 1.8.6, 1.8.7 and 1.9.1. (Aslak Hellesøy)
 * Ensure no errors are raised when limiting with tags which are not in the feature set (#464 Joseph Wilk)
 
 == 0.4.0 2009-10-09
